[package]
name = "pollinations_yew_lab"
version = "0.1.0"
edition = "2021"

[lib]
name = "pollinations_yew_lab"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
yew = { version = "0.21", features = ["csr"] }
gloo-net = "0.5"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
base64 = "0.21"
urlencoding = "2.1"
web-sys = { version = "0.3", features = [
    "Window",
    "HtmlSelectElement",
    "HtmlTextAreaElement",
    "HtmlInputElement",
    "Event",
    "InputEvent",
] }